--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/BigScreenTests.java=UTF-8
+encoding//src/MozillaFirefoxTests/BigScreenTests.java=UTF-8
+encoding//src/MozillaFirefoxTests/SmallScreenTests.java=UTF-8
